fixing contrast & size in next -prev in large devices

--- a/estilo.css
+++ b/estilo.css
@@ -111,6 +111,7 @@ width: 100%;
   width: auto;
   padding: 16px;
   margin-top: -22px;
+  background-color: rgb(229, 3, 218, .5);
   color: white;
   font-weight: bold;
   font-size: 25px;
@@ -348,6 +349,11 @@ footer {
 }
 .tab-box {
     max-width: 500px;
+}
+
+.prev, .next {
+    padding: 20px;
+    font-size: 2.5em;
 }
 }
 
